# USI

./: .gitignore  README.md  manager.py  pyproject.toml  setup.py
config/: logging.toml  settings-template.toml
kernel/: application.py  settings.py
kernel/database/: __init__.py  core.py
painless/design/: singleton.py
painless/utils/: funcs.py
student/controls/: student.py
student/models/: __init__.py  student.py
student/views/: __init__.py  student.py
