[tool.poetry]
name = "university"
version = "0.1.0"
description = "Student information form"
authors = ["beehdaad <behdad.siavoshi1375@gmail.com>"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tkcalendar = "^1.6.1"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
